2008-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (ReadDCMImage): Make DCM reader quit immediately on
	EOF condition.
	* coders/avi.c (ReadAVIImage): Make AVI reader more robust at
	rejecting bad files.
	* configure.ac: Eliminated --enable-delegate-build option that I
	have not used or tested for almost ten years so it probably did
	not work anyway.  Use --with-ttf=/prefix to specify the the
	installation prefix for freetype.  Use
	--with-ttf=/prefix/bin/freetype-config to specify the whole path
	to freetype-config.

2008-06-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Add support for
	-black-threshold and -white-threshold.
	* magick/image.h (enum ChannelType): Added GrayChannel
	enumeration.
	* magick/operator.c (QuantumOperatorImageMultivalue): New
	implementation function to make creating legacy functions like
	black/white thresholding easier.
	* wand/magick_wand.c (MagickBlackThresholdImage): Implemented.
	(MagickWhiteThresholdImage): Implemented.
	* magick/effect.c (BlackThresholdImage): Implemented a
	BlackThresholdImage() which is similar to (but not identical to)
	the one in ImageMagick.
	(WhiteThresholdImage): Implemented a WhiteThresholdImage() which
	is similar to (but not identical to) the one in ImageMagick.

2008-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.c: Added support for additional channel
	operators (-operator) for applying noise to one or more channels.
	The additional operators are Noise-Gaussian, Noise-Impulse,
	Noise-Laplacian, Noise-Multiplicative, Noise-Poisson, and
	Noise-Uniform.  The amount of noise applied is controlled via the
	numeric argument, which can specify the percentage of noise to
	apply.
	* magick/enum_strings.c: New source module to contain the various
	EnumToString() and StringToEnum() functions which seem to multiply
	like bunny-rabbits.
	* magick/gem.c (GenerateNoise): Poisson noise generation was