@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-06-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/image.c (SetImageInfo): Exclude all virtual delegates and
+        coders for pseudo-formats.
+
+</UL>
+<p>
 2008-06-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
