@@ -1,3 +1,8 @@
+2008-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/image.c (SetImageInfo): Exclude all virtual delegates and
+	coders for pseudo-formats.
+
 2008-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/dcm.c (ReadDCMImage): Make DCM reader quit immediately on
